[package]
name = "glade"
version = "0.1.0-alpha"
description = "Derive macros for simple use of GTK+ Glade UI bindings in Rust"
authors = ["Dr. Maxim Orlovsky <dr.orlovsky@gmail.com>"]
keywords = ["gtk", "glade", "ui", "gui"]
categories = ["gui"]
repository = "https://github.com/dr-orlovsky/rust-glade"
homepage = "https://github.com/dr-orlovsky/rust-glade"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]

[dependencies]
amplify = "~2.3.1"
amplify_derive = "~2.3.1"
