[package]
name = "glade_derive"
version = "0.1.0-alpha"
description = "Derive macros for simple use of GTK+ Glade UI bindings in Rust"
authors = ["Dr. Maxim Orlovsky <dr.orlovsky@gmail.com>"]
keywords = ["gtk", "glade", "ui", "derive"]
categories = ["gui"]
repository = "https://github.com/dr-orlovsky/rust-glade"
homepage = "https://github.com/dr-orlovsky/rust-glade"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "~1.0.7"
syn = "~1.0.31"
glade = { path = ".." }
